samples/_failures_safe/1761397579_102b81_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb99c9a9.c: In function ‘main’:
./samples/SAFE/__tmp_bb99c9a9.c:154:25: error: missing terminating " character
  154 |         fprintf(stderr, "Failed to add nodes\n
      |                         ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bb99c9a9.c:154:9: error: expected expression at end of input
  154 |         fprintf(stderr, "Failed to add nodes\n
      |         ^~~~~~~
./samples/SAFE/__tmp_bb99c9a9.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bb99c9a9.c:154:9: error: expected declaration or statement at end of input
